# wordle

./: .gitignore  README.md  requirements.txt
src/: benchmark_inv_index.py  benchmark_inv_index.txt  benchmark_inv_index_v1.py  benchmark_inv_index_v2.py  evaluation_results_single_word_craft_slate.txt  main.py  model.py  pares_to_speak.txt  pares_to_speak1.txt  prompt.py  test.ipynb  test.py  test_model_allwords.py  test_model_oneword.py  test_model_randomwords.py
src/benchmarks/: baseline-naive-slate.txt  benchmark-model-adieu.txt  benchmark-model-slate.txt  benchmark-naive-adieu.txt  benchmark-naive-slate.txt  benchmark-prompt-gusty.txt  benchmark-scorer-adieu.txt  benchmark-scorer-slate.txt  benchmark_inv_index1.txt
src/cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  wordle.cpp
src/cpp/game/: game.cpp  game.hpp
src/cpp/player/: inverted.cpp  inverted.hpp
src/data_structures/: positional_index.py
src/game/: eval_model.py  five_letter_words_freq.txt  model.py  playground.ipynb  wordle.py  wordle_game.py  wordle_game.py~  zipfs.py
src/player/: inverted_index.py  inverted_intersect.py  wordle_player.py  wordle_scorer.py
src/player/algorithms/: positional_intersect.py
src/player/data_structures/: positional_index.py
src/player/scoring/: WordleScorer.py  wordle_scorer.py
src/systems_analysis/: extra-model-analysis.txt  system-analysis-craft.txt  system-analysis-gleam.txt  system-analysis-intro.txt  system-analysis-prune.txt  system-analysis-reinforcement-learning.txt  system-analysis-vapid.txt
